--- a/src/app/components/home/featured-producer-card/featured-producer-card.html
+++ b/src/app/components/home/featured-producer-card/featured-producer-card.html
@@ -1,5 +1,6 @@
 <div
   class="card bg-base-100 image-full cursor-pointer transition-transform duration-300 ease-in-out hover:scale-105 w-[288px] shadow-sm"
+  (click)="goToProducer()"
 >
   <figure>
     <img
@@ -11,7 +12,7 @@
   <div class="card-body flex flex-col items-center justify-center text-center">
     <h2 class="card-title">{{producer().name}}</h2>
     <div class="card-actions justify-end">
-      <button class="btn btn-primary">See more</button>
+      <button class="btn btn-primary" (click)="goToProducer()">See more</button>
     </div>
   </div>
 </div>
