--- a/src/app/components/home/featured-producer-card/featured-producer-card.html
+++ b/src/app/components/home/featured-producer-card/featured-producer-card.html
@@ -5,7 +5,7 @@
   <figure>
     <img
       class="absolute inset-0 w-full h-full object-cover rounded-lg"
-      [src]="producer().image"
+      [src]="imageUrl"
       [alt]="producer().name"
     />
   </figure>
