--- a/src/app/components/home/featured-product-card/featured-product-card.html
+++ b/src/app/components/home/featured-product-card/featured-product-card.html
@@ -4,22 +4,20 @@
 >
   <figure class="w-full h-48 overflow-hidden">
     <img
-      [src]="product().image"
+      [src]="imageUrl"
       [alt]="product().name"
       class="w-full h-full object-cover"
     />
   </figure>
   <div class="card-body">
-    <h2 class="card-title">
-      {{`${product().name} (${product().quantity} ${product().unit})`}}
-    </h2>
+    <h2 class="card-title">{{`${product().name} (${product().unit})`}}</h2>
     <div class="flex justify-between items-start mt-2">
       <div class="flex items-center gap-2">
-        <app-rating [rate]="product().averageRate" />
+        <app-rating [rate]="4" />
       </div>
 
       <div class="text-right space-y-1">
-        @if (product().discount) {
+        @if (product().discount_percent) {
         <div class="flex items-baseline gap-2">
           <h3 class="text-sm primary text-error line-through">
             {{ product().price | currency:'USD':'symbol':'1.2-2':'en-US' }}
