--- a/src/app/components/home/new-bundles/new-bundles.html
+++ b/src/app/components/home/new-bundles/new-bundles.html
@@ -1,3 +1,4 @@
+@if (newBundles) {
 <section class="my-6">
   <h1 class="text-3xl text-center mb-6">
     <strong>Our new bundles</strong>
@@ -10,3 +11,4 @@
     </div>
   </div>
 </section>
+}
