--- a/src/app/components/home/new-bundle-card/new-bundle-card.html
+++ b/src/app/components/home/new-bundle-card/new-bundle-card.html
@@ -4,7 +4,7 @@
 >
   <figure class="w-full h-48 overflow-hidden">
     <img
-      [src]="bundle().image"
+      [src]="bundle().imageUrl"
       [alt]="bundle().name"
       class="w-full h-full object-cover"
     />
@@ -15,10 +15,5 @@
       <div class="badge badge-secondary">NEW</div>
     </h2>
     <p>{{bundle().description}}</p>
-    <div class="card-actions justify-end">
-      @for (category of bundle().categories; track $index) {
-      <div class="badge badge-outline badge-primary">{{category}}</div>
-      }
-    </div>
   </div>
 </div>
