--- a/src/app/components/producer/content/content.html
+++ b/src/app/components/producer/content/content.html
@@ -1,13 +1,13 @@
 <div
   class="hero min-h-screen"
-  [style.backgroundImage]="'url(' + producer.image + ')'"
+  [style.backgroundImage]="'url(' + producerImage + ')'"
 >
   <div class="hero-overlay"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">{{producer.name}}</h1>
       <div class="flex flex-col gap-2">
-        @for (social of producer.socials; track social) {
+        @for (social of socials; track social){
         <a
           class="btn btn-primary"
           [href]="social.url"
@@ -27,7 +27,7 @@
   </h1>
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap justify-center gap-4">
-      @for (product of producer.products; track product) {
+      @for (product of products; track product) {
       <app-featured-product-card [product]="product" />
       }
     </div>
